--- a/src/app/components/aircrafts/aircrafts-navbar/aircrafts-navbar.component.html
+++ b/src/app/components/aircrafts/aircrafts-navbar/aircrafts-navbar.component.html
@@ -4,6 +4,8 @@
             <button class="btn btn-outline-info m-2" (click)="getAllAircrafts()">Tous les avions</button>
             <button class="btn btn-outline-info m-2" (click)="getDesignAircrafts()">Avions en étude</button>
             <button class="btn btn-outline-info m-2" (click)="getDeveloppementAircrafts()">Avions en construction</button>
+            <input type="text" placeholder="Search"[formControl]="searchCtrl">
+            <button class="btn btn-outline-info m-2" (click)="onSearch(searchCtrl.value)">Search</button>
         </li>
     </ul>
 </nav>
