ajout des selectors

--- a/src/app/components/aircrafts/aircrafts.component.html
+++ b/src/app/components/aircrafts/aircrafts.component.html
@@ -29,5 +29,8 @@
             </tr>
         </tbody>
         </table>
+        <ng-container *ngIf="countAlertAircrafts$ | async as countAircrafts">
+            <h6 class="text-danger">total aircrafts under design & dev : {{countAircrafts}}</h6>
+        </ng-container>
     </ng-container>
 </ng-container>
